Clean up a few methods